2006-06-14  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* BaseDataList.cs: added ConnectToDataSource method that called from 
	OnLoad, fixed GetData method
	* Wizard.cs: fixed bug when called MoveTo after that control hierarchy
	has been created

2006-06-14  Andrew Skiba <andrews@mainsoft.com>

	* Menu.cs: add CssStyle value to the rendered class attribute

2006-06-13 Juraj Skripsky <js@hotfeet.ch>

	* Calendar.cs: Make sure WebControls.Enabled is respected.
	* SelectedDatesCollection.cs: Set time for all DateTime object passed in
	to 12:00am as MS.NET does the same.
	Fixes bug #71251.

2006-06-13  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Repeater.cs: fixed ConnectToDataSource method, subscribed to
	DataSourceViewChanged, looks for a datasource in its parent control
	fixed GetData method, should not get data if datasource is null

2006-06-13  Konstantin Triger  <kostat@mainsoft.com>

	* ObjectDataSourceView.cs: raise OnDataSourceViewChanged events when data changes.

2006-06-11  Konstantin Triger  <kostat@mainsoft.com>

	* GridView.cs: set the row index from GridRowView if CommandArgument does not contain this information.

2006-06-11  Konstantin Triger  <kostat@mainsoft.com>

	* ObjectDataSourceViewTest.cs: return documented default for OldValuesParameterFormatString.

2006-05-24  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DataList.cs: Fixed LoadViewState method

2006-05-04  Lluis Sanchez  <lluis@novell.com>

	* BoundField.cs: Added missing throw kyword. Patch by Marek Habersack.

2006-04-25  Konstantin Triger  <kostat@mainsoft.com>

	* BaseDataBoundControl.cs: ensure the control is bound if ViewState is disabled.

2006-04-25 Konstantin Triger <kostat@mainsoft.com>

	* FormView.cs: fix FormView.PageCount after data binding.

2006-04-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CheckBox.cs: certain attributes have to be rendered in the input tag,
	not the <span>. Fixes bug #71251.

2006-04-20  Konstantin Triger  <kostat@mainsoft.com>
